add_executable (01_auto "01 auto.cpp")
add_executable (02_constexpr "02 constexpr.cpp")
add_executable (03_nullptr "03 nullptr.cpp")
add_executable (04_decltype "04 decltype.cpp")
add_executable (05_default "05 default.cpp")
add_executable (06_delete "06 delete.cpp")
add_executable (07_delegate "07 delegate constructor.cpp")