add_executable (01_auto										"01 auto.cpp")
add_executable (02_constexpr								"02 constexpr.cpp")
add_executable (03_nullptr									"03 nullptr.cpp")
add_executable (04_decltype									"04 decltype.cpp")
add_executable (05_default									"05 default.cpp")
add_executable (06_delete									"06 delete.cpp")
add_executable (07_delegate									"07 delegate constructor.cpp")
add_executable (08_scoped_enumeration						"08 scoped enumeration.cpp")
add_executable (09_extern_template							"09_extern_template.cpp" "09_extern_template_main.cpp")
add_executable (10_lambda									"10_lambda.cpp")
add_executable (11_long_long								"11_long_long.cpp")
add_executable (12_move_constructor_assignment				"12_move_constructor_assignment.cpp")
add_executable (13_noexcept									"13_noexcept.cpp")
add_executable (14_override_final							"14_override_final.cpp")
add_executable (15_range_for								"15_range_for.cpp")
add_executable (16_rvalue_reference							"16_rvalue_reference.cpp")
add_executable (17_static_assert							"17_static_assert.cpp")
add_executable (18_initializer_list							"18_initializer_list.cpp")
add_executable (19_variadic_template						"19_variadic_template.cpp")
add_executable (20_trailing_return_type						"20_trailing_return_type.cpp")
add_executable (21_type_aliases								"21_type_aliases.cpp")