add_executable (01_class_template_argument_deduction                        "01_class_template_argument_deduction.cpp")
add_executable (02_if_constexpr                                             "02_if_constexpr.cpp")
add_executable (03_if_switch_statement                                      "03_if_switch_statement.cpp")
add_executable (04_inline_variable                                          "04_inline_variable.cpp" "04_inline_variable_another.cpp")
add_executable (05_fold_expression                                          "05_fold_expression.cpp")
add_executable (06_mandatory_copy_elision                                   "06_mandatory_copy_elision.cpp")
add_executable (07_namespace                                                "07_namespace.cpp")
add_executable (08_auto_ptr                                                 "08_auto_ptr.cpp")
add_executable (09_any_variant                                              "09_any_variant.cpp")
add_executable (10_byte                                                     "10_byte.cpp")
add_executable (11_optional                                                 "11_optional.cpp")
add_executable (12_size                                                     "12_size.cpp")
add_executable (13_trigraphs                                                "13_trigraphs.cpp")
add_executable (14_structured_binding_declarations                          "14_structured_binding_declarations.cpp")
add_executable (15_string_view                                              "15_string_view.cpp")
add_executable (16_filesystem                                               "16_filesystem.cpp")
